# pr-report

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/pr_report/: cli.py  display.py  report.py  types.py
